sidenav, chat and thread responsiveness, searchbar display in devspace and responsive tolgge interaction with sidenav

--- a/src/app/main-content/devspace/devspace.component.html
+++ b/src/app/main-content/devspace/devspace.component.html
@@ -1,5 +1,11 @@
 <div  *ngIf="navBarIsClosed" @toggleNavBar class="serverNav nav-Bar">
     <div class="serverNavContent nav-item" mode="side">
+        <div class="searchbar" [ngClass]="addClass">
+            <div class="inputFrame" [ngClass]="{'align-reverse' : !align_reverse}">
+                <input [placeholder]="placeholder">
+                <mat-icon>{{icon}}</mat-icon>
+            </div>
+        </div>
         <div class="titleRow">
             <div class="titleAndServerSvg">
                 <img src="/img/devspace/titleAndServerSvg.svg">
