--- a/src/app/shared/header/searchbar/searchbar.component.scss
+++ b/src/app/shared/header/searchbar/searchbar.component.scss
@@ -15,7 +15,7 @@
         height: 45px;
     }
 
-    @include respond-to-maxWidth(smallMedium) {
+    @include respond-to-maxWidth(small) {
         display: none;
     }
 
