--- a/src/app/main-content/chat/chat.component.scss
+++ b/src/app/main-content/chat/chat.component.scss
@@ -13,6 +13,10 @@ section {
         left: 0;
         right: 0;
         bottom: 0;
+        border-radius: 0px;
+    }
+    @include respond-to-maxWidth(small) {
+        border-radius: 0px;
     }
 }
 
