messages firebase collection and thread

--- a/src/app/main-content/chat/chat-header/chat-header.component.html
+++ b/src/app/main-content/chat/chat-header/chat-header.component.html
@@ -5,6 +5,10 @@
         <mat-icon>keyboard_arrow_down</mat-icon>
     </button>
 
+    <div class="testChannel">
+        
+    </div>
+
     <div class="add-members-container">
         <div class="active-members-image-container">
             <img src="/img/profile-pic/001.svg" alt="">
