--- a/src/app/main-content/message/message-answer/message-answer.component.html
+++ b/src/app/main-content/message/message-answer/message-answer.component.html
@@ -1,4 +1,4 @@
 <div class="answer-container" [ngClass]="object.checkUser(message) ? 'flex-end' : 'flex-start'">
-    <p class="answer" (click)="openThread()">{{message.thread.answer.length}} Anwtorten</p>
+    <p class="answer" (click)="openThread()">{{message.answers.length}} Anwtorten</p>
     <p class="answer-time">Letze Antwort 14:56</p>
 </div>
