--- a/src/app/main-content/main-content.component.html
+++ b/src/app/main-content/main-content.component.html
@@ -1,10 +1,10 @@
 
-<app-main-header></app-main-header>
+<app-main-header (backToDevSpaceEvent)="this.devSpaceAsTopLayer = true; this.devSpace.openNavBar()"></app-main-header>
 <div class="main-content">
     <app-devspace 
         #devSpace
         [ngClass]="{
-        'focus-app': devSpaceAsTopLayer
+        'focus-app-devSpace': devSpaceAsTopLayer
         }">
     </app-devspace>
     <div class="main-content-wrapper">
