--- a/src/app/main-content/main-content.component.scss
+++ b/src/app/main-content/main-content.component.scss
@@ -120,3 +120,20 @@ app-thread {
 .visible{
         display: flex;
 }
+
+.focus-app-devSpace{
+    @include respond-to-maxWidth(large) {
+        width: 100%;
+        max-width: 100%;
+        position: relative;
+    }
+    @include respond-to-maxWidth('smallMedium') {
+        width: 100%;
+        max-width: 100%;
+        position: absolute;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        z-index: 5;
+    }
+}
