--- a/src/app/shared/header/main-header.component.scss
+++ b/src/app/shared/header/main-header.component.scss
@@ -183,6 +183,36 @@
     &:hover{
         cursor: pointer;
     }
+
+    @include respond-to-maxWidth(small){
+        display: none;
+    }
+}
+
+
+
+.serverAndBackToNavContainer{
+    display: none;
+    @include nunito(700, 20px, var(--text-black));
+    @include respond-to-maxWidth(small){
+    @include dFlex(center, center);
+    gap: 8px;
+    }
+    .backToSideNavButton {
+        @include padding(10px, 10px, 10px, 10px);
+        transition: background-color 0.125s ease-in-out;
+        outline: none;
+        border: 0px solid;
+        border-radius: 100px;
+        background-color: transparent;
+    }
+    &:hover{
+        cursor: pointer;
+        .backToSideNavButton{
+            background-color: var(--secundary-bg);
+            cursor: pointer;
+        }
+    }
 }
 
 app-searchbar {
