--- a/src/app/dialog/create-channel/choose-members-create-channel/choose-members-create-channel.component.scss
+++ b/src/app/dialog/create-channel/choose-members-create-channel/choose-members-create-channel.component.scss
@@ -121,6 +121,7 @@ form {
     width: 50px;
     height: 50px;
     border-radius: 50px;
+    object-fit: cover;
 }
 
 .contactPictureContainer,
@@ -213,6 +214,7 @@ form {
     width: 32px !important;
     height: 32px !important;
     border-radius: 50px;
+    object-fit: cover;
 }
 
 ::ng-deep .mat-mdc-form-field-subscript-wrapper{
