--- a/src/app/main-content/devspace/devspace.component.scss
+++ b/src/app/main-content/devspace/devspace.component.scss
@@ -298,6 +298,7 @@ h3 {
     position: relative;
     display: flex;
     align-items: center;
+    object-fit: cover;
 }
 
 .onlineStatus {
@@ -314,12 +315,34 @@ h3 {
     width: 50px;
     height: 50px;
     border-radius: 50px; 
+    object-fit: cover;
 }
 
-.dropdown-content{
+.dropdown-content {
     flex: 1;
     overflow: auto;
+
+    /* Custom scrollbar styling */
+    &::-webkit-scrollbar {
+        width: 6px; /* Breite der Scrollbar */
+    }
+
+    &::-webkit-scrollbar-track {
+        background-color: transparent; /* Transparenter Track */
+    }
+
+    &::-webkit-scrollbar-thumb {
+        background-color: var(--primary-bg); /* Farbe des Thumbs */
+        border-radius: 30px; /* Rundungen für den Thumb */
+        transition: background-color 0.125s ease; /* Sanfter Übergang beim Hover */
+    }
+
+    &::-webkit-scrollbar-thumb:hover {
+        background-color: var(--primary-bg-dark); /* Hover-Farbe des Thumbs */
+        cursor: grab;
+    }
 }
+
 
 .searchbar{
     @include dFlex;  
