--- a/src/app/main-content/message/message-images/message-images.component.html
+++ b/src/app/main-content/message/message-images/message-images.component.html
@@ -1,6 +1,6 @@
 <div class="postet-image-container" [ngClass]="object.checkUser(message) ? 'flex-end' : 'flex-start'">
-    <div class="image-container" *ngFor="let attachmen of message.attachmen; let i = index">
-        <img class="image" [src]="attachmen">
+    <div class="image-container" *ngFor="let attachment of message.attachment; let i = index">
+        <img class="image" [src]="attachment">
         <button *ngIf="isEdit" (click)="deleteImage(i)" class="edit-images"><mat-icon>delete</mat-icon></button>
     </div>
 </div>
