--- a/src/app/main-content/login/sign-in/sign-in.component.html
+++ b/src/app/main-content/login/sign-in/sign-in.component.html
@@ -1,11 +1,11 @@
 <div class="content-inside-wrapper">
     <h1>Login</h1>
     <p>We recommend that you use the email address you use at work.</p>
+    <form>
     <div class="input-area">   
-        <!-- <app-input-field icon="mail" placeholder="example@email.com"  [required]="true"  pattern="^[a-zA-Z ]+$">> ></app-input-field>
-        <app-input-field icon="lock" placeholder="Password" [required]="true"  pattern="^[a-zA-Z ]+$">>  ></app-input-field> -->
-        <input type="email" name="email" [(ngModel)]="email" [required]="true" pattern="^[a-zA-Z ]+$" placeholder="example@email.com">
-        <input type="password" name="password" [(ngModel)]="password" [required]="true" pattern="^[a-zA-Z ]+$" placeholder="Password">
+
+        <app-input-field #mail type="text" minlenght="3"  icon="mail" placeholder="example@email.com" [required]="true"  pattern="^[a-zA-Z ]+$">> ></app-input-field>
+        <app-input-field #password type="password" icon="lock" placeholder="Password" [required]="true" pattern="^[a-zA-Z ]+$">>  ></app-input-field>
     </div>
 
     <a>Forgot Password?</a>
@@ -15,7 +15,9 @@
     <button class="google-button" (click)="signInWithGoogle()"><img src="./img/main-assets/google.svg"><span>Sign in with Google</span></button>
 
     <div class="button-collection">
-        <button (click)="signInUser()" >Log In</button>
+        <button (click)="signInUser(mail.getValue(), password.getValue())" >Log In</button>
         <button class="specialButton" routerLink="/start">Guest-Login</button>
+
     </div>
+    </form>
 </div>
