--- a/src/app/shared/header/input-field/input-field.component.html
+++ b/src/app/shared/header/input-field/input-field.component.html
@@ -1,14 +1,14 @@
 <div class="custom-input" [ngClass]="addClass">
 
-    @if (!inputField.valid && inputField.touched){
+    @if (!inputControl.valid && inputControl.touched){
         <div class="error-messages">
-        @if(inputField.errors?.['required']){
+        @if(inputControl.errors?.['required']){
             <span>Field is required!</span>
         }
-        @else if(inputField.errors?.['minlength']){
+        @else if(inputControl.errors?.['minlength']){
             <span>Must be at least {{minlength}} characters long!</span>
         }
-        @else if(inputField.errors?.['pattern'] && type != 'email'){
+        @else if(inputControl.errors?.['pattern'] && type != 'email'){
             <span>This character is not allowed!</span>
         }
         @else if(type === 'email'){
@@ -17,8 +17,9 @@
         </div>
     }
 
-    <div class="inputFrame"  [ngClass]="{'align-reverse' : !align_reverse}">
-        <input name="inputName" [(ngModel)]="value" #inputField="ngModel" [required]="required ? true: false" [minlength]="minlength" [type]="type" [placeholder]="placeholder" [pattern]="pattern"/>
+    <div class="inputFrame" [ngClass]="{'align-reverse' : !align_reverse}">
+        <input name="inputName" [formControl]="inputControl" #inputField [required]="required ? true: false" [type]="type" [minlength]="minlength" [placeholder]="placeholder" [pattern]="pattern"/>
         <mat-icon>{{icon}}</mat-icon>
     </div>
+
 </div>
