--- a/src/app/main-content/chat/chat.component.scss
+++ b/src/app/main-content/chat/chat.component.scss
@@ -28,6 +28,13 @@ section {
     scrollbar-width: none;
 }
 
+.loader {
+    text-align: center;
+    padding: 20px;
+    font-size: 1.2em;
+    color: #555;
+}
+
 app-chat-header {
     @include heightWidth($h: 10%);
     border-radius: 20px 20px 0 0;
