--- a/src/app/main-content/message/message.component.html
+++ b/src/app/main-content/message/message.component.html
@@ -1,7 +1,7 @@
 <div class="new-message-container">
-    <div class="hover" (mousemove)="isMessageHover = true" (mouseleave)="resetHoverAndMenu()" [ngClass]="object.checkUser(message) ? 'row-reverse' : ''">
+    <div class="hover" (mousemove)="isMessageHover = true" (mouseleave)="resetHoverAndMenu()" [ngClass]="auth.checkUser(message) ? 'row-reverse' : ''">
 
-        <img class="profile-image" src="{{message.profileImage}}" alt="" [ngStyle]="object.checkUser(message) ? { 'margin-left' : '30px' } : { 'margin-right' : '30px' }">
+        <img class="profile-image" src="{{message.profileImage}}" alt="" [ngStyle]="auth.checkUser(message) ? { 'margin-left' : '30px' } : { 'margin-right' : '30px' }">
 
         <div class="message-container" [ngStyle]="isEdit ? {'width': '100%'} : {'width': 'auto'}">
             <app-message-name [message]="message"></app-message-name>
