--- a/src/app/main-content/login/sign-in/sign-in.component.html
+++ b/src/app/main-content/login/sign-in/sign-in.component.html
@@ -4,9 +4,10 @@
     <form>
     <div class="input-area">   
 
-        <app-input-field #mail type="text" minlenght="3"  icon="mail" placeholder="example@email.com" [required]="true"  pattern="^[a-zA-Z ]+$">> ></app-input-field>
-        <app-input-field #password type="password" icon="lock" placeholder="Password" [required]="true" pattern="^[a-zA-Z ]+$">>  ></app-input-field>
+        <app-input-field #mail type="text" minlenght="3"  icon="mail" placeholder="example@email.com" [required]="true"></app-input-field>
+        <app-input-field #password type="password" icon="lock" placeholder="Password" [required]="true"></app-input-field>
     </div>
+
 
     <a>Forgot Password?</a>
 
