--- a/src/app/main-content/login/sign-in/sign-in.component.html
+++ b/src/app/main-content/login/sign-in/sign-in.component.html
@@ -1,24 +1,23 @@
 <div class="content-inside-wrapper">
     <h1>Login</h1>
     <p>We recommend that you use the email address you use at work.</p>
-    <form>
-    <div class="input-area">   
+    <div class="form" [formGroup]="myFormLogin">
+        <div class="input-area">   
 
-        <app-input-field #mail type="text" minlenght="3"  icon="mail" placeholder="example@email.com" [required]="true"></app-input-field>
-        <app-input-field #password type="password" icon="lock" placeholder="Password" [required]="true"></app-input-field>
+            <app-input-field  formControlName="email" type="text" minlenght="3"  icon="mail" placeholder="example@email.com" minlength="3" [required]="true"></app-input-field>
+            <app-input-field  formControlName="password" type="password" icon="lock" placeholder="Password" minlength="8"  [required]="true"></app-input-field>
+        </div>
+
+        <a>Forgot Password?</a>
+
+        <div class="hrElement"><span>Or Else</span></div>
+
+        <button class="google-button" (click)="signInWithGoogle()"><img src="./img/main-assets/google.svg"><span>Sign in with Google</span></button>
+
+        <div class="button-collection">
+            <button [disabled]="!myFormLogin.valid" (click)="signInUser()" >Log In</button>
+            <button class="specialButton"  routerLink="/start">Guest-Login</button>
+
+        </div>
     </div>
-
-
-    <a>Forgot Password?</a>
-
-    <div class="hrElement"><span>Or Else</span></div>
-
-    <button class="google-button" (click)="signInWithGoogle()"><img src="./img/main-assets/google.svg"><span>Sign in with Google</span></button>
-
-    <div class="button-collection">
-        <button (click)="signInUser(mail.getValue(), password.getValue())" >Log In</button>
-        <button class="specialButton" routerLink="/start">Guest-Login</button>
-
-    </div>
-    </form>
 </div>
