--- a/src/app/main-content/login/sign-in/sign-in.component.scss
+++ b/src/app/main-content/login/sign-in/sign-in.component.scss
@@ -26,6 +26,11 @@ button{
         cursor: pointer;
     }
 
+    &:disabled{
+        background-color: var(--text-gray);
+        cursor: not-allowed;
+    }
+
     @include respond-to-maxWidth(smallMedium) {
         padding: 6px 12px;
         letter-spacing: 0px;
@@ -88,7 +93,7 @@ a{
     }
 }
 
-form{
+.form{
     @include heightWidth($w: 100%, $h: auto);
     @include dFlex;
     flex-direction: column;
@@ -135,9 +140,12 @@ form{
         }
     }
 
+
     span{
         @include figtree($fw: 400, $fs: clamp(16px,4vw,18px), $c: var(--text-blue));
     }
+
+
 
     &:hover{
         background-color: var(--primary-bg);
