--- a/src/app/main-content/message/message.component.html
+++ b/src/app/main-content/message/message.component.html
@@ -1,23 +1,24 @@
-<div class="new-message-container">
-    <div class="hover" (mousemove)="isMessageHover = true" (mouseleave)="resetHoverAndMenu()" [ngClass]="auth.checkUser(message) ? 'row-reverse' : ''">
+<div class="new-message-container" [ngClass]="thread ? 'border-none' : 'border-top'">
+    <div class="hover" (mousemove)="isMessageHover = true" (mouseleave)="resetHoverAndMenu()"
+        [ngClass]="auth.checkUser(message) ? 'row-reverse' : ''">
 
-        <img class="profile-image" src="{{message.profileImage}}" alt="" [ngStyle]="auth.checkUser(message) ? { 'margin-left' : '30px' } : { 'margin-right' : '30px' }">
+        <img class="profile-image" src="{{message.profileImage}}" alt=""
+            [ngStyle]="auth.checkUser(message) ? { 'margin-left' : '30px' } : { 'margin-right' : '30px' }">
 
         <div class="message-container" [ngStyle]="isEdit ? {'width': '100%'} : {'width': 'auto'}">
             <app-message-name [message]="message"></app-message-name>
             <app-message-text [message]="message" [isEdit]="isEdit" [editMessageText]="editMessageText" (cancelEdit)="cancelEdit()" (saveText)="saveText()"></app-message-text>
             <app-message-images [message]="message" [isEdit]="isEdit"></app-message-images>
-            <app-message-answer [message]="message"></app-message-answer>
-            <app-message-reation [message]="message"></app-message-reation>
+            <app-message-answer *ngIf="thread == false" [message]="message"></app-message-answer>
+            <app-message-reation *ngIf="threadFirstMessage == false" [message]="message"></app-message-reation>
         </div>
 
-        <div class="answer-date-time-container"><p>{{message.createdAt}}</p></div>
-        <app-message-options  
-        [message]="message" 
-        [isMessageHover]="isMessageHover" 
-        [isMessageEditMenuOpen]="isMessageEditMenuOpen" 
-        (deleteEvent)="deleteMessage()"
-        (toggleEdit)="toggleEditMode()">
+        <div *ngIf="thread == false" class="answer-date-time-container">
+            <p>{{message.createdAt}}</p>
+        </div>
+        <app-message-options [message]="message" [isMessageHover]="isMessageHover"
+            [isMessageEditMenuOpen]="isMessageEditMenuOpen" (deleteEvent)="deleteMessage()"
+            (toggleEdit)="toggleEditMode()">
         </app-message-options>
     </div>
 </div>
