--- a/src/app/main-content/message/message.component.scss
+++ b/src/app/main-content/message/message.component.scss
@@ -3,9 +3,7 @@
 .new-message-container {
     @include dFlex($ai: start, $jc: start);
     box-sizing: border-box;
-    padding: 50px 0px;
     position: relative;
-    border-top: 1px solid var(--border-light-purple);
 
     .profile-image {
         @include image($br: 50%);
@@ -29,6 +27,16 @@
 
 }
 
+.border-top {
+    padding: 50px 0px;
+    border-top: 1px solid var(--border-light-purple);
+}
+
+.border-none {
+    padding: 10px 0;
+    border-top: none;
+}
+
 .hover {
     display: flex;
     width: 100%;
@@ -46,4 +54,8 @@
 
 .text.light {
     @include nunito($fw: 400, $fs: 18px, $c: var(--secundary-bg));
+}
+
+.thread-answers-current {
+
 }
