--- a/src/app/main-content/thread/thread.component.scss
+++ b/src/app/main-content/thread/thread.component.scss
@@ -6,6 +6,7 @@ section {
     flex-direction: column;
     background-color: var(--secundary-bg);
     border-radius: 20px;
+
     @include respond-to-maxWidth(medium) {
         border-radius: 0px;
     }
@@ -27,4 +28,19 @@ app-thread-header {
 app-thread-message-field {
     @include heightWidth($h: 20%);
     border-radius: 0 0 20px 20px;
+}
+
+.between-line-container {
+width: 100%;
+@include dFlex($jc: space-between);
+    p {
+        @include nunito($fw: 400, $fs: 16px, $c: var(--border-light-purple));
+        left: 0;
+        top: -10px;
+    }
+
+    .between-line {
+        width: 60%;
+        border: 1px solid var(--border-light-purple);
+    }
 }
