--- a/src/app/main-content/devspace/devspace.component.html
+++ b/src/app/main-content/devspace/devspace.component.html
@@ -51,7 +51,7 @@
         </div>
         @if (contactsAreVisible) {
         <div class="dropDownContacts" @slideDown class="dropdown-content">
-            <div class="contact" *ngFor="let member of members; let i = index">
+            <div class="contact" *ngFor="let member of members; let i = index" (click)="openDirectMessage(member.id)">
                 <div class="contactPicture">
                     <img class="userImage" src="{{member.imageUrl}}" alt="Member image">
                     <img class="onlineStatus" [src]="member.status ? '/img/profile-pic/online.svg' : '/img/profile-pic/offline.svg'" alt="Online status">
