--- a/src/app/main-content/chat/chat-header/chat-header.component.scss
+++ b/src/app/main-content/chat/chat-header/chat-header.component.scss
@@ -2,11 +2,44 @@
 
 section {
     @include heightWidth($w: 100%, $h: 100%);
-    @include dFlex($ai: center, $jc: space-between);
     box-sizing: border-box;
     padding: 0 30px;
     border-radius: 20px 20px 0 0;
     box-shadow: 0 4px 4px -2px var(--primary-bg);
+}
+
+.channel-header {
+    @include heightWidth($w: 100%, $h: 100%);
+    @include dFlex($ai: center, $jc: space-between);
+}
+
+.direct-message-header {
+    @include heightWidth($w: 100%, $h: 100%);
+    @include dFlex($ai: center, $jc: start);
+
+    div {
+        position: relative;
+
+        img {
+            @include heightWidth($w: 50px, $h: 50px);
+            @include image($br: 50%);
+            object-fit: cover;
+        }
+
+        .online-status {
+            @include heightWidth($w: 15px, $h: 15px);
+            position: absolute;
+            border-radius: 50%;
+            background-color: greenyellow;
+            bottom: 5px;
+            right: 0px;
+        }
+    }
+
+    h2 {
+        @include nunito($fw: 700, $fs: 24px);
+        margin: 0 15px;
+    }
 }
 
 .creator-team-btn {
