--- a/src/app/main-content/chat/chat.component.scss
+++ b/src/app/main-content/chat/chat.component.scss
@@ -6,6 +6,7 @@ section {
     flex-direction: column;
     background-color: var(--secundary-bg);
     border-radius: 20px;
+
     @include respond-to-maxWidth(medium) {
         width: 100%;
         max-width: 100%;
@@ -15,6 +16,7 @@ section {
         bottom: 0;
         border-radius: 0px;
     }
+
     @include respond-to-maxWidth(small) {
         border-radius: 0px;
     }
@@ -43,4 +45,40 @@ app-chat-header {
 app-chat-message-field {
     @include heightWidth($h: 20%);
     border-radius: 0 0 20px 20px;
+}
+
+.direct-message-container {
+    @include heightWidth($w: 100%, $h: 100%);
+}
+
+.welcome-direct-message {
+    box-sizing: border-box;
+    padding: 0 30px;
+    @include dFlex($jc: end, $ai: start);
+    flex-direction: column;
+    @include heightWidth($w: 100%, $h: 100%);
+
+    div {
+        @include dFlex($ai: end, $jc: start);
+        margin-bottom: 10px;
+
+        img {
+            @include heightWidth($w: 90px, $h: 90px);
+            @include image($br: 50%);
+            object-fit: cover;
+        }
+
+        h2 {
+            @include nunito($fw: 700, $fs: 24px);
+            margin: 0 15px;
+        }
+    }
+
+    p {
+        @include nunito($fw: 400, $fs: 20px, $c: var(--text-gray));
+
+        span {
+            @include nunito($fw: 400, $fs: 20px, $c: var(--purple-3));
+        }
+    }
 }
