testing lost password

--- a/src/app/main-content/login/lost-password/lost-password.component.html
+++ b/src/app/main-content/login/lost-password/lost-password.component.html
@@ -8,12 +8,12 @@
     <p>Please enter your correct E-Mail address.</p>
     <div class="form" [formGroup]="myFormLostPassword">
         <div class="input-area">   
-            <app-input-field formControlName="email" #email type="email" icon="mail" placeholder="example@email.com" [required]="true" minlength="6" pattern="[a-zA-Z0-9._%+\-]+@[a-zA-Z0-9.\-]+\.[a-zA-Z]{2,}"></app-input-field>
+            <app-input-field formControlName="email" type="email" icon="mail" placeholder="example@email.com" [required]="true" minlength="6" pattern="[a-zA-Z0-9._%+\-]+@[a-zA-Z0-9.\-]+\.[a-zA-Z]{2,}"></app-input-field>
         </div>
         <p class="description">Afterwards we will send you a E-Mail to reset your current Password.</p>
 
         <div class="button-collection">
-            <button [disabled]="!myFormLostPassword.valid" >Send E-mail</button>
+            <button [disabled]="!myFormLostPassword.valid" (click)="sendResetMail()" >Send E-mail</button>
         </div>
     </div>
 </div>
