--- a/src/app/main-content/login/reset-password/reset-password.component.html
+++ b/src/app/main-content/login/reset-password/reset-password.component.html
@@ -1,12 +1,20 @@
-<div class="content-inside-wrapper">
-    <h1>Reset your Password</h1>
-    <div class="form" [formGroup]="myFormResetPassword">
-        <div class="input-area">   
-            <app-input-field formControlName="setNewPassword" type="password" icon="lock" placeholder="Password" minlength="8" [required]="true"></app-input-field>
-            <app-input-field formControlName="confirmPassword" type="password" icon="lock" placeholder="Password" minlength="8" [required]="true"></app-input-field>
+<section class="MainWrapper">
+ 
+    <div class='whiteBox'>
+
+        <div class="content-inside-wrapper">
+            <h1>Reset your Password</h1>
+            <div class="form" [formGroup]="myFormResetPassword">
+                <div class="input-area">   
+                    <app-input-field formControlName="setNewPassword" type="password" icon="lock" placeholder="Password" minlength="8" [required]="true"></app-input-field>
+                    <app-input-field formControlName="confirmPassword" type="password" icon="lock" placeholder="Password" minlength="8" [required]="true"></app-input-field>
+                </div>
+                <div class="button-collection">
+                    <button [disabled]="!myFormResetPassword.valid && myFormResetPassword.value.setNewPassword != myFormResetPassword.value.confirmPassword" >Save new Password</button>
+                </div>
+            </div>
         </div>
-        <div class="button-collection">
-            <button [disabled]="!myFormResetPassword.valid && myFormResetPassword.value.setNewPassword != myFormResetPassword.value.confirmPassword" >Save new Password</button>
-        </div>
+
     </div>
-</div>
+
+</section>
