--- a/src/app/main-content/login/reset-password/reset-password.component.scss
+++ b/src/app/main-content/login/reset-password/reset-password.component.scss
@@ -1,61 +1,126 @@
 @import '../../../../mixin.scss';
-
-.content-inside-wrapper{
-    width: 100%;
-    @include dFlex ($jc: center);
-    flex-direction: column;
-}
-
-app-input-field{
-    @include heightWidth($w: 75%, $h: auto);
-    margin-top: 16px;
-}
-
-.form{
-    @include heightWidth($w: 100%, $h: auto);
+.MainWrapper{
+    @include heightWidth($w: 100%, $h: 95dvh);
     @include dFlex;
     flex-direction: column;
+    justify-content:flex-start;
+    gap: 1%;
 }
 
-h1{
-    @include figtree($fw: 600, $fs: clamp(42px,8vw,56px), $c: var(--purple-3));
-    margin-bottom: clamp(0px,4vw,18px);
+
+.whiteBox::-webkit-scrollbar{
+    display: none;
 }
 
-p{
-    @include heightWidth($w: 75%, $h: auto);
-    @include figtree($fw: 400, $fs: clamp(16px,4vw,18px), $c: var(--text-black));
-    text-align: center;
-}
-
-.input-area{
-    @include heightWidth($w: 100%, $h: auto);
-    @include dFlex ();
+.whiteBox{
+    position: relative;
+    @include heightWidth($w: 100%, $h: 100%);
+    @include dFlex($jc: space-between);
+    max-width: 600px;
+    background-color: var(--secundary-bg);
+    border-radius: 24px;
     flex-direction: column;
-}
+    padding: 28px 0px;
+    max-height: 65dvh;
+    box-shadow: 0px 2px 3px rgba(16, 0, 159, 0.1);
+    overflow-y: scroll;
+    margin-top: calc(148px);
 
-button{
-    @include figtree($fw: 400, $fs: clamp(16px,4vw,18px), $c: var(--secundary-bg));
-    min-width: clamp(125px, 4vw, 160px);
-    margin: 18px 8px 0px 8px;
-    height: calc(60px - 16px);
-    border-radius: 36px;
-    padding: 8px 16px;
-    border: 1px solid transparent;
-    background-color: var(--text-blue);
-
-    &:hover{
-        background-color: var(--purple-2);
-        cursor: pointer;
-    }
-
-    &:disabled{
-        background-color: var(--text-gray);
-        cursor: not-allowed;
-    }
-
-    @include respond-to-maxWidth(smallMedium) {
-        padding: 6px 12px;
-        letter-spacing: 0px;
+    @include respond-to-maxWidth(medium) {
+        @include heightWidth($w: 90%, $h: 100%);
     }
 }
+
+.deactive-forwards{
+    width: 100%;
+    @include dFlex;
+    position: absolute;
+    position: 0px;
+    left: 0px;
+    animation: fade-out-forwards 0.35s ease-in forwards;
+}
+
+.active-forwards{
+    width: 100%;
+    @include dFlex;
+    position: absolute;
+    position: 0px;
+    left: 0px;
+    animation: fade-in-forwards 0.35s ease-in forwards;
+}
+
+@keyframes fade-out-forwards{
+    from{
+    opacity: 1;
+    transform: translateX(0px);
+    }
+
+    to{
+    opacity: 0;
+    display: none;
+    transform: translateX(-500px);
+    }
+}
+
+
+@keyframes fade-in-forwards{
+    from{
+    opacity: 0;
+    transform: translateX(500px);
+    display: flex;
+    }
+
+    to{
+    opacity: 1;
+    transform: translateX(0px);
+    }
+}
+
+.deactive-backwards{
+    width: 100%;
+    @include dFlex;
+    position: absolute;
+    position: 0px;
+    left: 0px;
+    animation: fade-out-backwards 0.35s ease-in forwards;
+}
+
+.active-backwards{
+    width: 100%;
+    @include dFlex;
+    position: absolute;
+    position: 0px;
+    left: 0px;
+    animation: fade-in-backwards 0.35s ease-in forwards;
+}
+
+@keyframes fade-out-backwards{
+    from{
+    opacity: 1;
+    transform: translateX(0px);
+    }
+
+    to{
+    opacity: 0;
+    display: none;
+    transform: translateX(500px);
+    }
+}
+
+@keyframes fade-in-backwards{
+    from{
+    opacity: 0;
+    transform: translateX(-500px);
+    display: flex;
+    }
+
+    to{
+    opacity: 1;
+    transform: translateX(0px);
+    }
+}
+
+.still-deactive{
+    display: none;
+}
+
